# jzero

./: Cargo.toml  README.md
src/: main.rs  storage.rs  traits.rs
src/cards/: vocab_a.yaml
src/domain/: course.rs  lesson.rs  lesson_progress.rs  lesson_result.rs  mod.rs  question.rs  section.rs
src/jzero/: draw.rs  mod.rs  update.rs
src/session/: draw.rs  mod.rs  update.rs
src/ui/: mod.rs
src/ui/app/: draw.rs  mod.rs  update.rs
src/ui/section/: draw.rs  mod.rs  update.rs
src/ui/section_viewer/: draw.rs  mod.rs
